# deferralX

./: .gitignore  README.md  pyproject.toml
.mplconfig/: fontlist-v390.json
configs/: utility_config.json
docs/: colab_runbook.md  experiment_protocol.md  initial_results.md  reference_analysis.md  route_to_reason_positioning.md
notebooks/: deferralx_colab.ipynb
outputs/: summary.md
outputs/check_final/: selected_thresholds.json  summary.md
outputs/check_fixed/: selected_thresholds.json  summary.md
outputs/check_new/: selected_thresholds.json  summary.md
outputs/main_colab/: summary.md
outputs/main_colab_v2/: selected_thresholds.json  summary.md
outputs/multiseed/seed_11/: selected_thresholds.json  summary.md
outputs/multiseed/seed_17/: selected_thresholds.json  summary.md
outputs/multiseed/seed_7/: selected_thresholds.json  summary.md
outputs/multiseed_colab_v2/report/: results_section.md
outputs/multiseed_colab_v2/seed_11/: selected_thresholds.json  summary.md
outputs/multiseed_colab_v2/seed_17/: selected_thresholds.json  summary.md
outputs/multiseed_colab_v2/seed_23/: selected_thresholds.json  summary.md
outputs/multiseed_colab_v2/seed_31/: selected_thresholds.json  summary.md
outputs/multiseed_colab_v2/seed_7/: summary.md  (+1 more)
outputs/reanalysis_from_data/: selected_thresholds.json
outputs/reanalysis_v2/: selected_thresholds.json  summary.md
src/deferralx/: __init__.py  calibration.py  evaluation.py  merge_questions.py  policies.py  prepare_questions.py  real_data.py  reporting.py  run.py  schema.py  synthetic.py  utility.py
